<resources>
    <string name="app_name">IntercorpTest</string>

    <!-- Login page -->
    <string name="_19_extended">Intercorp Test</string>
    <string name="login_title_intercorp_test">Intercorp Test</string>
    <string name="login_title_log_in">Log in</string>
    <string name="login_mobile_number">Mobile number</string>
    <string name="login_or_login_with">or login with</string>
    <string name="text_btn_log_in">Log in</string>

    <!-- Verify sms page -->
    <string name="verify_page_title_verify">Verify</string>
    <string name="verify_page_mobile_number">Sms Code</string>
    <string name="text_btn_verify">Verify</string>

    <string name="facebook_app_id">1078187835967635</string>
    <string name="fb_login_protocol_scheme">fb1078187835967635</string>
    <string name="register_title_log_in">Register</string>
    <string name="register_mobile_number">"Name: "</string>

</resources>
