<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".features.register.view.RegisterActivity">

    <TextView
        android:id="@+id/txt_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title_intercorp_test"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dimension_title_page"
        app:layout_constraintBottom_toTopOf="@+id/guideline_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title_log_in"
        android:textSize="@dimen/dimension_title_component"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="@+id/guideline_left_padding"
        app:layout_constraintTop_toTopOf="@+id/guideline_title" />

    <View
        android:id="@+id/view_line_register_title"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@android:color/white"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="@+id/txt_register_title"
        app:layout_constraintStart_toStartOf="@+id/guideline_left_padding"
        app:layout_constraintTop_toBottomOf="@+id/txt_register_title" />

    <!-- Name field -->
    <TextView
        android:id="@+id/txt_mobile_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/register_mobile_number"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/img_phone_icon"
        app:layout_constraintTop_toBottomOf="@+id/txt_register_title" />

    <ImageView
        android:id="@+id/img_phone_icon"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@+id/guideline_left_padding"
        app:layout_constraintTop_toBottomOf="@+id/txt_mobile_number"
        app:srcCompat="@drawable/ic_person_outline_black_24dp"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:singleLine="true"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:hint="First name"
        app:layout_constraintBottom_toBottomOf="@+id/img_phone_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_phone_icon"
        app:layout_constraintTop_toTopOf="@+id/img_phone_icon"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <View
        android:id="@+id/view_line_bottom_phone"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/edit_username"
        app:layout_constraintStart_toStartOf="@+id/edit_username"
        app:layout_constraintTop_toBottomOf="@+id/edit_username" />

    <!-- Surname field -->
    <TextView
    android:id="@+id/txt_mobile_surname"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_10sdp"
    android:text="Surname: "
    android:textColor="@android:color/white"
    android:textSize="@dimen/_10ssp"
    android:textStyle="bold"
    app:layout_constraintStart_toEndOf="@+id/img_surname_icon"
    app:layout_constraintTop_toBottomOf="@+id/view_line_bottom_phone" />

    <ImageView
        android:id="@+id/img_surname_icon"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@+id/guideline_left_padding"
        app:layout_constraintTop_toBottomOf="@+id/txt_mobile_surname"
        app:srcCompat="@drawable/ic_person_outline_black_24dp"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/edit_surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:singleLine="true"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:hint="Surname"
        app:layout_constraintBottom_toBottomOf="@+id/img_surname_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_surname_icon"
        app:layout_constraintTop_toTopOf="@+id/img_surname_icon"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <View
        android:id="@+id/view_line_bottom_surname"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/edit_surname"
        app:layout_constraintStart_toStartOf="@+id/edit_surname"
        app:layout_constraintTop_toBottomOf="@+id/edit_surname" />

    <!-- Age field -->
    <TextView
        android:id="@+id/txt_mobile_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="Birthday: "
        android:textColor="@android:color/white"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/img_age_icon"
        app:layout_constraintTop_toBottomOf="@+id/view_line_bottom_surname" />

    <ImageView
        android:id="@+id/img_age_icon"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@+id/guideline_left_padding"
        app:layout_constraintTop_toBottomOf="@+id/txt_mobile_age"
        app:srcCompat="@drawable/ic_person_outline_black_24dp"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/edit_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:inputType="date"
        android:maxLines="1"
        android:singleLine="true"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:hint="Birthday"
        app:layout_constraintBottom_toBottomOf="@+id/img_age_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_age_icon"
        app:layout_constraintTop_toTopOf="@+id/img_age_icon"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <View
        android:id="@+id/view_line_bottom_age"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/edit_age"
        app:layout_constraintStart_toStartOf="@+id/edit_age"
        app:layout_constraintTop_toBottomOf="@+id/edit_age" />

    <!-- Date of birth field -->

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spinner_loader"
        style="@style/SpinKitView.Small.Circle"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:SpinKit_Color="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/img_curved_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_username" />

    <TextView
        android:id="@+id/txt_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        tools:text="Loading"
        android:visibility="gone"
        android:textSize="@dimen/_10ssp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/spinner_loader"
        app:layout_constraintStart_toStartOf="@+id/spinner_loader"
        app:layout_constraintTop_toBottomOf="@+id/spinner_loader" />

    <ImageView
        android:id="@+id/img_curved_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/shape_head_block_curve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        tools:ignore="ContentDescription" />

    <View
        android:id="@+id/view_white_block"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_curved_bg" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingStart="@dimen/_40sdp"
        android:paddingEnd="@dimen/_40sdp"
        android:background="@drawable/bg_common_btn"
        android:text="Register"
        android:textColor="@android:color/white"
        android:onClick="onClickRegister"
        app:layout_constraintEnd_toEndOf="@+id/view_white_block"
        app:layout_constraintStart_toStartOf="@+id/view_white_block"
        app:layout_constraintTop_toTopOf="@+id/img_curved_bg" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_20sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.73" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

</androidx.constraintlayout.widget.ConstraintLayout>
